Soren/fix item wrapping (#13)
* Fixed item wrapping and other minor issues.

* Fixed an issue with failing to refresh projects.

--- a/TextMaker.App/src/app/text-combiner/edit-text-group/edit-text-group.component.scss
+++ b/TextMaker.App/src/app/text-combiner/edit-text-group/edit-text-group.component.scss
@@ -8,6 +8,7 @@ input[type='checkbox'] {
 
 .text-item-buttons {
 	display: flex;
+	flex-wrap: wrap;
 }
 
 .name-text {
