--- a/TextMaker.App/src/app/text-combiner/text-group/text-group.component.scss
+++ b/TextMaker.App/src/app/text-combiner/text-group/text-group.component.scss
@@ -9,6 +9,7 @@ button {
 
 .text-item-buttons {
 	display: flex;
+	flex-wrap: wrap;
 }
 
 .is-exclusive {
